--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script defer src="./script.js"></script>
+    <script defer src="js/script.js"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link
       rel="stylesheet"
@@ -16,7 +16,20 @@
     <title>Project 1 - API</title>
 </head>
 <body>
+    
     <h4><strong> Giphy Club </strong></h4>
+        <button class="btn" id="trending">What's trending?</button>
+    <form>
+        <input id="box1" type="text" placeholder="Enter a word or phrase"/>
+        <button class="btn" id="search">Find me a GIF!</button>
+        <div class="searchedGif"></div>
+    </form>
+
+    <form>
+        <input id="box2" type="text" placeholder="Enter a word or phrase"/>
+        <button class="btn" id="translate">Translate my word!</button>
+        <div class="translatedGif"></div>
+    </form>
     
 </body>
 </html>
