WIP: CSS-limit img to the box

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
       integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <title>Project 1 - API</title>
 </head>
 <body>
     
-    <h4><strong> Giphy Club </strong></h4>
+    <h4><strong> Giphy Fun </strong></h4>
 
         <button class="btn" id="trending">What's trending?</button>
-        <div class="trendingGif">
+        <div class="bigbox trendingGif">
             <img id="img1" src="" alt="">
         </div>
         
@@ -28,7 +31,7 @@
     <form>
         <input id="box" type="text" placeholder="Enter a word or phrase"/>
         <button class="btn" id="search">Find me a GIF!</button>
-        <div class="searchedGif">
+        <div class="bigbox searchedGif">
             <img id="img2" src="" alt="">
         </div>
     </form>
