feat: adds clear button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <br></br>
     <form>
         <input id="box" type="text" placeholder="Enter a word or phrase"/>
+        <button id="clear" type="reset">X</button>
         <button class="btn" id="search">Find me a GIF!</button>
         <div class="bigbox searchedGif">
             <img id="img2" src="" alt="">
