--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         
     <br></br>
     <form>
-        <input id="box" type="text" placeholder="Enter a word or phrase"/>
-        <button id="clear" type="reset">X</button>
-        <button class="btn" id="search">Find me a GIF!</button>
+        <input id="box" type="text" placeholder="Enter a word or phrase"/><!--
+        --><button id="clear" type="reset">X</button>
+        <button class="btn" id="search">Find a GIF!</button>
         <div class="bigbox searchedGif">
             <img id="img2" src="" alt="">
         </div>
