--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     
     <h4><strong> Giphy Fun </strong></h4>
 
-        <button class="btn" id="trending">What's trending?</button>
+        <button class="btn" id="trending" style="font-size:20px;">What's trending?</button>
         <div class="bigbox trendingGif">
             <img id="img1" src="" alt="">
         </div>
         
     <br></br>
     <form>
-        <input id="box" type="text" placeholder="Enter a word or phrase"/><!--
-        --><button id="clear" type="reset">X</button>
-        <button class="btn" id="search">Find a GIF!</button>
+        <input id="box" type="text" placeholder="Enter a word or phrase" style="font-size:20px;"/><!--
+        --><button id="clear" type="reset" style="font-size:20px;">X</button>
+        <button class="btn" id="search" style="font-size:20px;">Find a GIF!</button>
         <div class="bigbox searchedGif">
             <img id="img2" src="" alt="">
         </div>
