--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     
     <h4><strong> Giphy Fun </strong></h4>
 
-        <button class="btn" id="trending" style="font-size:20px;">What's trending?</button>
+        <button class="btn" id="trending" style="font-size:22px;">What's trending?</button>
+        <button class="btn" id="share" style="font-size:22px;">Share</button>
         <div class="bigbox trendingGif">
             <img id="img1" src="" alt="">
         </div>
         
     <br></br>
     <form>
-        <input id="box" type="text" placeholder="Enter a word or phrase" style="font-size:20px;"/><!--
+        <input id="box" type="text" placeholder="Enter a word or phrase" style="font-size:21px;"/><!--
         --><button id="clear" type="reset" style="font-size:20px;">X</button>
-        <button class="btn" id="search" style="font-size:20px;">Find a GIF!</button>
+        <button class="btn" id="search" style="font-size:22px;">Find a GIF!</button>
+        <button class="btn" id="share" style="font-size:22px;">Share</button>
         <div class="bigbox searchedGif">
             <img id="img2" src="" alt="">
         </div>
